--- a/templates/addrestaurants.html
+++ b/templates/addrestaurants.html
@@ -1,13 +1,14 @@
 <html>
 <head>
-<a href="{{ url_for('logout') }}" class= "button">Logout</a>
+<a href="{{ url_for('logout') }}" class= "button">Logout</a><br>
 </head>
 <body>
+	<img src= "{{ image_link }}" alt= "Profile Picture" align="left" width="50" height="50"><h1>{{ username }}</h1><br>
 	<form action="{{ url_for('wishlist')}}" method="POST">
 		<h2>Which restaurants would you like to add to your WishList?</h2><br>
 		{%for d in data%}
-		<input type="checkbox" name="restaurant" value="{{d['restaurant']['name']}}">{{d['restaurant']['name']}}<br>
-		<a href= '{{d['restaurant']['url']}}' target= "_blank"> Click to view more details on {{d['restaurant']['name']}}</a><br><br>
+		<input type="checkbox" name="restaurant" value="{{d._json['restaurant']['name']}}">{{d['restaurant']['name']}}<br>
+		<a href= '{{d._json['restaurant']['url']}}' target= "_blank"> Click to view more details on {{d['restaurant']['name']}}</a><br><br>
 		{%endfor%}
 		<input type="submit" value="Add to WishList">
 </form> 
