--- a/templates/welcomepage.html
+++ b/templates/welcomepage.html
@@ -1,14 +1,35 @@
-<a href="{{ url_for('logout') }}" class= "button">Logout</a>
+<a href="{{ url_for('logout') }}" class= "button">Logout</a><br>
+<a href= "{{ url_for('wishlist') }}">See Wishlist</a><br>
+<img src= "{{ image_link }}" alt= "Profile Picture" align="left" width="50" height="50">
+<h1>Welcome {{ username }}</h1>
+<h2>What type of food are you looking for?</h2><br>
+<form method="POST" action="/addrestaurants">
+	{{ form.csrf_token }}
+	{{ form.hidden_tag() }}
+	{{ form.cuisine.label }} {{ form.cuisine() }}<br>
+	{{ form.city.label }} {{ form.city() }}<i>example: 'Livingston, NJ'</i><br>
+	{{ form.submit() }}
+</form>
+
+<button onClick="runAJAX()">Quick List of Asian Restaurants in Livingston, NJ</button>
+
 <div>
 	{% for message in get_flashed_messages() %}
 	{{ message }}
 	{% endfor %}
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-<h1>What type of food are you looking for?</h1><br>
-<form method="POST">
-	{{ form.csrf_token }}
-	{{ form.cuisine.label }} {{ form.cuisine() }}<br>
-	{{ form.city.label }} {{ form.city() }}<i>example: 'Livingston, NJ'</i><br>
-	{{ form.submit() }}
-</form>
+<script>
+function runAJAX () {
+	$.ajax({
+	  url: "/ajax",
+		dataType: "json"
+	})
+	  .done(function( data ) {
+			$.each(data.livingston, function(index, value) {
+	    $("<p>"+ value.name + "</p>").appendTo($('div'))
+	});
+	  });
+		}
+</script>
