--- a/templates/logging_in.html
+++ b/templates/logging_in.html
@@ -8,6 +8,7 @@
 <h3><a href="{{ url_for('user_registration') }}">New user? Click here to create an account!</a></h3><br>
 <form method="POST">
 	{{ form.csrf_token }}
+	{{ form.hidden_tag() }}
 	{{ form.email.label }} {{ form.email() }}
 	{{ form.password.label }} {{ form.password() }}
 	{{ form.submit() }}
