--- a/templates/addrestaurants.html
+++ b/templates/addrestaurants.html
@@ -3,7 +3,7 @@
 <a href="{{ url_for('logout') }}" class= "button">Logout</a><br>
 </head>
 <body>
-	{% if image_link != 'No image available'}
+	{% if image_link != 'No image available' %}
 	<img src= "{{ image_link }}" alt= "Profile Picture" align="left" width="50" height="50">
 	{% endif %}
 	<h1>{{ username }}</h1><br>
