--- a/templates/emptywishlist.html
+++ b/templates/emptywishlist.html
@@ -1,4 +1,4 @@
-{% if image_link != 'No image available'}
+{% if image_link != 'No image available' %}
 <img src= "{{ image_link }}" alt= "Profile Picture" align="left" width="50" height="50">
 {% endif %}
 <h1>I'm sorry {{ username }} there's nothing in your wishlist</h1>
