--- a/templates/addrestaurants.html
+++ b/templates/addrestaurants.html
@@ -7,11 +7,12 @@
 	<img src= "{{ image_link }}" alt= "Profile Picture" align="left" width="50" height="50">
 	{% endif %}
 	<h1>{{ username }}</h1><br>
+	<h2><a href="{{ url_for('welcomepage') }}">New Search</a></h2>
 	<form action="{{ url_for('wishlist')}}" method="POST">
-		<h2>Which restaurants would you like to add to your WishList?</h2><br>
+		<h2>Which restaurants would you like to add to your WishList?</h2>
 		{%for d in data%}
-		<input type="checkbox" name="restaurant" value="{{d._json['restaurant']['name']}}">{{d['restaurant']['name']}}<br>
-		<a href= '{{d._json['restaurant']['url']}}' target= "_blank"> Click to view more details on {{d['restaurant']['name']}}</a><br><br>
+		<input type="checkbox" name="restaurant" value="{{d['restaurant']['name']}}">{{d['restaurant']['name']}}<br>
+		<a href= '{{d['restaurant']['url']}}' target= "_blank"> Click to view more details on {{d['restaurant']['name']}}</a><br><br>
 		{%endfor%}
 		<input type="submit" value="Add to WishList">
 </form> 
