--- a/templates/welcomepage.html
+++ b/templates/welcomepage.html
@@ -5,7 +5,7 @@
 {% endif %}
 <h1>Welcome {{ username }}</h1>
 <h2>What type of food are you looking for?</h2><br>
-<form method="POST" action="/addrestaurants">
+<form method="POST">
 	{{ form.csrf_token }}
 	{{ form.hidden_tag() }}
 	{{ form.cuisine.label }} {{ form.cuisine() }}<br>
